--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -1,5 +1,7 @@
 .tooltip {
-  z-index: 3 !important;
+  &.MuiTooltip-popper {
+    z-index: 3;
+  }
 
   .MuiTooltip-tooltip {
     padding: 10px;
